@@ -1,3 +1,8 @@
+2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* field.h: constify arguments.
+	* field.cpp: Ditto.
+
 2003-01-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* expression.cpp: Eliminate unneeded transparent scatterer.
